# phasta

./: CMakeLists.txt  License.txt  README  README.md  license.txt  svls.pc.in
AcuStat/: CMakeLists.txt  create_AcuStatInput.sh
AcuStat/include/: commonAcuStat.h  new_interfaceAcuStat.h  setsyncioparamAcuStat.h
AcuStat/src/: CMakeLists.txt  commuMax.f  ctypes.f  error.f  input.f  new_interface.c  phasta.cc  readnblk.f  setsyncioparam.cc
M2N/: CMakeLists.txt
M2N/include/: commonM2N.h  commonM2N_c.h  new_interfaceM2N.h  setsyncioparamM2N.h
M2N/src/: CMakeLists.txt  cname.f  commu.f  ctypes.f  input.f  main.c  new_interface.c  phasta.cc  readnblk.f  setsyncioparam.cc
M2NFixBnd/: CMakeLists.txt
M2NFixBnd/include/: new_interfaceM2NFixBnd.h  setsyncioparamM2NFixBnd.h
M2NFixBnd/src/: CMakeLists.txt  commuMax.f  ctypes.f  dumbCvariables.c  error.f  input.f  new_interface.c  phasta.cc  readnblk.f  setsyncioparam.cc
checkphasta/: CMakeLists.txt  checkphasta.cpp
converterIO/: .gitignore  CMakeLists.txt  Makefile  README.md  converterN2O.cc  converterO2N.cc  create_IO_N2O_input.sh  create_IO_O2N_input.sh
phMetis/: CMakeLists.txt  Makefile  Makefile.am  VERSION  configure.ac
phMetis/Lib/: CMakeLists.txt  bucketsort.c  coarsen.c  compress.c  debug.c  estmem.c  fm.c  fortran.c  frename.c  graph.c  initpart.c  kmetis.c  kvmetis.c  kwayvolfm.c  macros.h  mcoarsen.c  memory.c  mesh.c  meshpart.c  metis.h  mfm.c  minitpart.c  mkmetis.c  mmatch.c  mrefine.c  ometis.c  parmetis.c  proto.h  rename.h  sfm.c  stat.c  struct.h  subdomains.c  util.c
phSolver/: CHANGES  CMakeLists.txt  Makefile  README  mod_blowing_Duct.f  phastaConfig.cmake.in  readnblk.f
phSolver/AMG/: Makefile  amgread.txt  ramg_ITAI.f  ramg_cheby.f  ramg_coarse.f  ramg_control.f  ramg_data.f  ramg_driver.f  ramg_extract.f  ramg_ggb.f  ramg_mls.f  ramg_paratools.f  ramg_smoother.f  ramg_tools.f
phSolver/Test_C/: forces.correct  geom.atdb  geom.bdr  geom.dmg  geom.sms  histor.correct  solver.inp
phSolver/Test_IC/: geom.atdb  geom.bdr  geom.dmg  geom.sms  histor.correct  solver.inp
phSolver/common/: .gitignore  BCprofile2.f  CMakeLists.txt  Cinput.cc  GaussLegendre1D.c  GaussLegendreSimplex.c  INIprofile.f  Input.h  Makefile  ValType.cc  ValType.h  asadj.f  asbnabi.f  asbwmod.f  asithf.f  auxmpi.h  aveprep.f  bardmc.f  bctint.f  bgq_utils.c  blkdta.f  blowerControl.f  blowerControl.f90  clear.f  cmass.f  common.f  common.h  common_c.h  common_c.h.orig  commu.f  commuInt.f  ctypes.f  cycle_count.c  d2wall.c  dtn.f  dumbCvariables.c  e3metric.f  elem-search.f  elm3keps.f  eqn_plane.f  (+156 more)
phSolver/common/phstreamEmpty/: phstream.h  phstreamEmpty.cc
phSolver/common/test/: CMakeLists.txt  chdir_mod.f  phIOposixMultiTopo.cc  phIOread.f  phIOreadIlwork.cc  phIOreaddatablock.cc  phIOreadheader.cc  phIOreadheader.f  phIOwrite.F90  phIOwrite.cc  phIOwrite.f  phIOwriteFields.cc  phIOwriteReadZeroSz.cc  phIOwriteheader.cc  testing.cmake
phSolver/compressible/: BCprofile.f  BCprofile2.f  BCprofileKW.f  CMakeLists.txt  MachControl.f  MachControl.f90  Makefile  advection.h  asaugmr.f  asbflx.f  asbmfg.f  asbres.f  asiflx.f  asigmr.f  asimfg.f  asiq.f  asires.f  au1gmr.f  au1mfg.f  au2mfg.f  bc3bdg.f  bc3lhs.f  bc3per.f  bc3res.f  bflux.f  d2wall.f  densitycurrent_primitive.h  driveCeed.c  e3.f  e3b.f  e3bdg.f  e3bdg_nd.f  e3bvar.f  e3conv.f  e3dc.f  e3eig1.f  e3ivar.f  e3juel.f  e3ls.f  e3massl.f  (+54 more)
phSolver/compressible/test/: CMakeLists.txt  compressible.cmake  compressibleShockTube.cmake  runphasta.cmake  testing.cmake
phSolver/include/: auxmpi.h  common_c.h  les.h  topo_shapedefs.h  usr.h
phSolver/incompressible/: BCprofile.f  CMakeLists.txt  Makefile  advLES.f  asbflx.f  asbmfg.f  asigmr.f  asiq.f  asiqGradV.f  bc3diag.f  bc3global.f  bc3lhs.f  bc3per.f  bc3res.f  bflux.f  e3.f  e3b.f  e3bvar.f  e3dc.f  e3ivar.f  e3lhs.f  e3q.f  e3qGradV.f  e3ql.f  e3qvar.f  e3res.f  e3source.f  e3stab.f  e3sts.f  elmStats.f  elmgmr.f  errsmooth.f  filters.f  forces.f  ftools.f  genlmass.f  getSol.c  getdiff.f  getfld.f  hessian.f  (+18 more)
phSolver/incompressible/e3source/: e3source.fRHSonly  e3source.fimplicit
phSolver/incompressible/test/: CMakeLists.txt  runphasta.cmake  testing.cmake
phSolver/testIC-DSIM/: geom.sdm  geom.sms  geom.spj  solver.inp
phastaIO/: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  phastaIO.cc  phastaIO.h  phiompi.c  phiompi.h  phiostats.c  phiostats.h  phiotmrc.cc  phiotmrc.h
phastaIO/phiotimer_empty/: phiotimer.h  phiotimer_empty.cc  phiotimer_empty.f
shapeFunction/: Makefile  Makefile.am  configure.ac
shapeFunction/src/: Bn.c  BnDrv.c  CMakeLists.txt  En.c  EnDrv.c  Fn.c  FnDrv.c  Lagrange.c  TriShapeAndDrv.cc  blend.c  blendDrv.c  modeShape.c  modeShapeDrv.c  parDrv.c  shapeFuncInternals.h  uniformP.c
svLS/: CMakeLists.txt
