file(GLOB SRC_FILES *.cc *.f *.f90 *.c)
list(REMOVE_ITEM SRC_FILES "main.c")
add_library(compressible ${SRC_FILES})
if(PHASTA_USE_MPI)
	include_directories(${MPI_INCLUDE_PATH} ${MPI_Fortran_INCLUDE_PATH})
endif(PHASTA_USE_MPI)
include_directories(${PHASTA_BINARY_DIR}/include ${PHASTA_BINARY_DIR})
add_executable(phastaC.exe main.c)
set_target_properties(phastaC.exe PROPERTIES HAS_CXX TRUE)
set_target_properties(compressible PROPERTIES HAS_CXX TRUE)
set_target_properties(phastaC.exe PROPERTIES LINKER_LANGUAGE Fortran)
set_target_properties(compressible PROPERTIES LINKER_LANGUAGE Fortran)
if(PHASTA_USE_MPI)
	target_link_libraries(phastaC.exe ${MPI_LIBRARIES} ${MPI_Fortran_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} common compressible phMetis common phMetis phastaIO)
endif(PHASTA_USE_MPI)
if(PHASTA_BUILD_SHAPEFUNCTION)
	target_link_libraries(phastaC.exe shapeFunction)
endif(PHASTA_BUILD_SHAPEFUNCTION)
if(PHASTA_BUILD_PHSHAPE)
	target_link_libraries(phastaC.exe phshape)
endif(PHASTA_BUILD_PHSHAPE)
target_link_libraries(phastaC.exe compressible)
