macro(setup_exe exename srcname)
  add_executable(${exename} ${srcname})
  target_link_libraries(${exename} common phastaIO)
endmacro(setup_exe)

include_directories("${PHASTA_BINARY_DIR}")
include_directories(${CMAKE_Fortran_MODULE_DIRECTORY})

setup_exe(phIOreadheader phIOreadheader.cc)
setup_exe(phIOreaddatablock phIOreaddatablock.cc)
setup_exe(phIOwrite phIOwrite.cc)
set(ftnsrc chdir_mod.f phIOreadheader.f)
setup_exe(phIOreadheaderFtn "${ftnsrc}")
set_property(TARGET phIOreadheaderFtn PROPERTY LINKER_LANGUAGE Fortran)
include(testing.cmake)
