macro(setup_exe exename srcname)
  add_executable(${exename} ${srcname})
  target_link_libraries(${exename} common phastaIO)
endmacro(setup_exe)

include_directories("${PHASTA_BINARY_DIR}")
include_directories(${CMAKE_Fortran_MODULE_DIRECTORY})

setup_exe(phIOreadheader phIOreadheader.cc)
setup_exe(phIOwriteReadZeroSz phIOwriteReadZeroSz.cc)
setup_exe(phIOwriteFields phIOwriteFields.cc)
setup_exe(phIOreaddatablock phIOreaddatablock.cc)
setup_exe(phIOreadIlwork phIOreadIlwork.cc)
setup_exe(phIOposixMultiTopo phIOposixMultiTopo.cc)
setup_exe(phIOwrite phIOwrite.cc)
set(ftnsrc chdir_mod.f phIOread.f)
setup_exe(phIOreadFtn "${ftnsrc}")
set_property(TARGET phIOreadFtn PROPERTY LINKER_LANGUAGE Fortran)
setup_exe(phIOwriteFtn phIOwrite.f)
set_property(TARGET phIOwriteFtn PROPERTY LINKER_LANGUAGE Fortran)
include(testing.cmake)
